@@ -78,9 +78,10 @@ public:
         host_callbacks=_host_callbacks;
     }
     ~BuzzMachineCallbacks() {
+      /* done in CMDKMachineInterface::~CMDKMachineInterface()
       if (mdkHelper) {
         delete mdkHelper;
-      }
+      }*/
     }
 
     CWaveInfo const *GetWave(int const i);
