@@ -74,9 +74,10 @@ public:
         host_callbacks=_host_callbacks;
     }
     ~BuzzMachineCallbacksPre12() {
+      /* done in CMDKMachineInterface::~CMDKMachineInterface()
       if (mdkHelper) {
         delete mdkHelper;
-      }
+      }*/
     }
 
     CWaveInfo const *GetWave(int const i);
